--- a/app/cabinet-delivery.html
+++ b/app/cabinet-delivery.html
@@ -261,151 +261,50 @@
 <article class="content">
     <div class="min-container">
         <div class="page-layout">
-            <div class="breadcrumps"><a class="breadcrumps__item" href="#">Главная</a><a class="breadcrumps__item"
-                                                                                         href="#">Личный
-                кабинет</a><span
-                    class="breadcrumps__item">Электронные чеки</span></div>
+            <div class="breadcrumps"><a class="breadcrumps__item" href="#">Главная</a><span
+                    class="breadcrumps__item">Доставка</span></div>
 
 
-            <h1 class="h1">Электронные чеки</h1>
+            <h1 class="h1"><span class="blue-txt">Доставка</span></h1>
 
-            <div class="table-responsive">
-                <div class="table-orders">
-                    <div class="thead">
-                        <div class="tr">
-                            <div class="th">Дата создания чека</div>
-                            <div class="th">Сумма</div>
-                            <div class="th">Тип операции</div>
-                            <div class="th">Чек</div>
-                            <div class="th">Оплата</div>
+            <div class="delivery-page">
+                <div class="delivery-content">
+                    <div class="delivery-page__selections">
+                        <div class="delivery-page__box">
+                            <form method="post">
+                                <label>
+                                    <input type="text" placeholder="Россия, Москва">
+                                </label>
+                                <button type="button" class="header-search__btn">
+                                    <svg class="svg-icon">
+                                        <use xlink:href="img/svg-sprite/main-sprite.svg#location"></use>
+                                    </svg>
+                                </button>
+                            </form>
+                        </div>
+
+                        <div class="delivery-page__box">
+                            <form method="post">
+                                <label>
+                                    <input type="text" placeholder="Россия, Москва">
+                                </label>
+                                <button type="button" class="header-search__btn">
+                                    <svg class="svg-icon">
+                                        <use xlink:href="img/svg-sprite/main-sprite.svg#location"></use>
+                                    </svg>
+                                </button>
+                            </form>
                         </div>
                     </div>
-
-                    <div class="tbody">
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
-                        <div class="tr">
-                            <div class="td">25 августа 2020 в 21:16</div>
-                            <div class="td">520 ₽</div>
-                            <div class="td">Яндекс-доставки</div>
-                            <div class="td"><a href="#" class="link-view-check">Посмотреть чек</a></div>
-                            <div class="td">Картой</div>
-                        </div>
+                    <div class="delivery-page__maps">
+                        <iframe src="https://yandex.ru/map-widget/v1/-/CCQxFKTY9D"></iframe>
                     </div>
                 </div>
+
+                <div class="delivery-total">
+
+                </div>
             </div>
-            <a href="#" class="load-more">Показать еще</a>
 
         </div>
     </div>
