--- a/app/cabinet-delivery.html
+++ b/app/cabinet-delivery.html
@@ -271,7 +271,7 @@
                 <div class="delivery-content">
                     <div class="delivery-page__selections">
                         <div class="delivery-page__box">
-                            <form method="post">
+                            <form method="post" class="form-city">
                                 <label>
                                     <input type="text" placeholder="Россия, Москва">
                                 </label>
@@ -284,7 +284,7 @@
                         </div>
 
                         <div class="delivery-page__box">
-                            <form method="post">
+                            <form method="post" class="form-city">
                                 <label>
                                     <input type="text" placeholder="Россия, Москва">
                                 </label>
@@ -302,8 +302,41 @@
                 </div>
 
                 <div class="delivery-total">
+                    <div class="delivery-total__box">
+                        <div class="delivery-total__line">
+                            <p>Итого</p>
+                            <div class="delivery-total__box-sum">20 000 ₽</div>
+                        </div>
 
+                        <div class="line-wrapper">
+                            <p>Москва</p>
+                            <p>Москва</p>
+                        </div>
+                    </div>
+
+                    <div class="delivery-total__box">
+                        <div class="delivery-total__line">
+                            <span>Вес</span>
+                            <strong>100 000 кг</strong>
+                        </div>
+                        <div class="delivery-total__line">
+                            <span>Объем</span>
+                            <strong>20,3 м<sup>3</sup></strong>
+                        </div>
+                    </div>
+
+                    <div class="delivery-total__box">
+                        <div class="delivery-total__line">
+                            <span>Время в пути</span>
+                            <strong>5-7 дней</strong>
+                        </div>
+                        <div class="delivery-total__line">
+                            <span>Дата поступления</span>
+                            <strong>10.10.2020</strong>
+                        </div>
+                    </div>
                 </div>
+
             </div>
 
         </div>
