--- a/app/delivery-details.html
+++ b/app/delivery-details.html
@@ -271,6 +271,7 @@
                 <div class="delivery-content">
                     <div class="delivery-page__selections">
                         <div class="delivery-page__box">
+                            <div class="form-city-title">Откуда</div>
                             <form method="post" class="form-city">
                                 <label>
                                     <input type="text" placeholder="Россия, Москва">
@@ -284,6 +285,7 @@
                         </div>
 
                         <div class="delivery-page__box">
+                            <div class="form-city-title">Куда</div>
                             <form method="post" class="form-city">
                                 <label>
                                     <input type="text" placeholder="Россия, Москва">
@@ -295,10 +297,20 @@
                                 </button>
                             </form>
                         </div>
+
+                        <div class="delivery-page__box delivery-page__box-size">
+                            <div class="form-city-title">Вес</div>
+                            <form method="post" class="form-city">
+                                <label class="number">
+                                    <span class="minus">-</span>
+                                    <input class="number__input" type="text" placeholder="1 кг">
+                                    <span class="plus">+</span>
+                                </label>
+                                <div class="tov-price-count__title">кг</div>
+                            </form>
+                        </div>
                     </div>
-                    <div class="delivery-page__maps">
-                        <iframe src="https://yandex.ru/map-widget/v1/-/CCQxFKTY9D"></iframe>
-                    </div>
+
                 </div>
 
                 <div class="delivery-total">
