--- a/app/delivery.html
+++ b/app/delivery.html
@@ -269,10 +269,10 @@
 
             <div class="delivery-page">
                 <div class="delivery-content">
-                    <div class="delivery-page__selections">
+                    <form method="post" class="delivery-page__selections">
                         <div class="delivery-page__box">
                             <div class="form-city-title">Откуда</div>
-                            <form method="post" class="form-city">
+                            <div class="form-city">
 
                                 <label>
                                     <input type="text" placeholder="Россия, Москва">
@@ -282,12 +282,12 @@
                                         <use xlink:href="img/svg-sprite/main-sprite.svg#location"></use>
                                     </svg>
                                 </button>
-                            </form>
+                            </div>
                         </div>
 
                         <div class="delivery-page__box">
                             <div class="form-city-title">Куда</div>
-                            <form method="post" class="form-city">
+                            <div class="form-city">
                                 <label>
                                     <input type="text" placeholder="Россия, Москва">
                                 </label>
@@ -296,9 +296,9 @@
                                         <use xlink:href="img/svg-sprite/main-sprite.svg#location"></use>
                                     </svg>
                                 </button>
-                            </form>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                     <div class="delivery-page__maps">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CCQxFKTY9D"></iframe>
                     </div>
